<resources>

    <!--accountSetting-->
    <string name="logout">Logout</string>
    <string name="password">비밀번호</string>
    <string name="none">None</string>


    <string name="title_document_detail">Document Detail</string>
    <string name="app_name">My Application</string>
    <string name="profile_picture">Profile Picture:</string>
    <string name="display_name">Display Name:</string>
    <string name="login_failed">Login failed.</string>
    <string name="email_text">Email:</string>

    <string name="complete">완료</string>
    <string name="modify">수정</string>

    <string name="name">이름</string>
    <string name="e_name">영문</string>
    <string name="ch_name">한문</string>
    <string name="rrn">주민번호</string>
    <string name="age">나이</string>
    <string name="phoneNumber">휴대폰</string>
    <string name="number">전화번호</string>
    <string name="email">E-mail</string>
    <string name="SNS">SNS</string>
    <string name="address">주소</string>

    <string name="title">제목:</string>
    <string name="fileTitle">파일 이름</string>
    <string name="save_only_template">양식만 저장</string>
    <string name="create">생성</string>



    <string name = "eduBack">학력사항</string>
    <string name = "formOfCareer">경력사항</string>
    <string name = "awLic">수상 및 자격증</string>
    <string name = "selfIntroduction">자기소개서</string>



</resources>
