<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_below="@+id/profile_screen_picture">
        <TextView
            android:id="@+id/profile_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_screen_picture"
            android:layout_marginLeft="30dp"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/profile_name_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/profile_name_title"
            android:textSize="26sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/profile_e_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_name_content"
            android:layout_marginLeft="30dp"
            android:text="@string/e_name"/>
        <TextView
            android:id="@+id/profile_e_name_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/profile_eame_title"
            android:textSize="26sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/profile_ch_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_name_content"
            android:layout_marginLeft="30dp"
            android:text="@string/ch_name"/>
        <TextView
            android:id="@+id/profile_ch_name_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/profile_eame_title"
            android:textSize="26sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/profile_rrn_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_eame_content"
            android:layout_marginLeft="30dp"
            android:text="@string/rrn"/>
        <TextView
            android:id="@+id/profile_rrn_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:hint="OOOOOO-OOOOOOO"
            android:layout_below="@+id/profile_rrn_title"
            android:textColor="@color/black"

            android:textSize="26sp"/>
        <TextView
            android:id="@+id/profile_age_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_rrn_content"
            android:layout_marginLeft="30dp"
            android:text="나이"/>
        <TextView
            android:id="@+id/profile_age_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:hint="OO세"
            android:layout_below="@+id/profile_age_title"
            android:textColor="@color/black"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/profile_SNS_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_email_content"
            android:layout_marginLeft="30dp"
            android:text="@string/SNS"/>
        <TextView
            android:id="@+id/profile_SNS_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:hint="Blog/Twitter/Facebook"
            android:layout_below="@+id/profile_phoneNumber_title"
            android:textSize="26sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/profile_phoneNumber_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_email_content"
            android:layout_marginLeft="30dp"
            android:text="@string/phoneNumber"/>
        <TextView
            android:id="@+id/profile_phoneNumber_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:hint="OOO@OOOOO.OOO"
            android:layout_below="@+id/profile_phoneNumber_title"
            android:textSize="26sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/profile_number_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_email_content"
            android:layout_marginLeft="30dp"
            android:text="전화번호"/>
        <TextView
            android:id="@+id/profile_number_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:hint=""
            android:layout_below="@+id/profile_phoneNumber_title"
            android:textSize="26sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/profile_email__title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_age_content"
            android:layout_marginLeft="30dp"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/profile_email_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:hint=""
            android:layout_below="@+id/profile_email_title"
            android:textSize="26sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/profile_address_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_age_content"
            android:layout_marginLeft="30dp"
            android:text="@string/address"/>
        <TextView
            android:id="@+id/profile_address_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="30dp"
            android:hint=""
            android:layout_below="@+id/profile_email_title"
            android:textSize="26sp"
            android:textColor="@color/black"/>

    </LinearLayout>