<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/themeColor">

    <com.amar.library.ui.StickyScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:stickyHeader="@+id/headerLayout"
        app:stickyFooter="@+id/buttonLayout">
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:id="@+id/main_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/expanded_screen_mainImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/buttonLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/layout_border"
                    android:layout_below="@+id/main_layout">
                    <TextView
                        android:id="@+id/expanded_screen_file"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginVertical="10dp"
                        android:text="@string/title"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:textColor="#34495e" />
                    <EditText
                        android:id="@+id/expanded_screen_name"
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/fileTitle"
                        android:layout_toRightOf="@id/expanded_screen_file"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:textColor="#34495e" />
                    <android.widget.Button
                        android:id="@+id/expanded_screen_download_without_modify"
                        android:layout_width="78dp"
                        android:layout_height="52dp"
                        android:layout_toRightOf="@id/expanded_screen_name"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:text="@string/save_only_template"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_maintheme" />
                    <android.widget.Button
                        android:id="@+id/expanded_screen_create"
                        android:layout_width="78dp"
                        android:layout_height="52dp"
                        android:layout_toRightOf="@+id/expanded_screen_download_without_modify"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:text="@string/create"
                        android:background="@drawable/btn_maintheme"
                        android:textColor="@color/white"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/creditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_below="@id/buttonLayout"
                    android:background="@drawable/layout_border"
                    >
                    <LinearLayout
                        android:id="@+id/profile0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/e_name"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/e_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ch_name"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ch_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/profile1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:layout_below="@+id/profile0"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rrn"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/rrn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout123"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/age"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="2">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/age"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/profile2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:layout_below="@+id/profile1"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout01234"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout123243"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/SNS"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="2">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/SNS"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/profile3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_below="@+id/profile2"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout0234"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phoneNumber"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout23243"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/number"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/profile4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        android:layout_below="@+id/profile3"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout01324"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            app:hintTextColor="@color/themeColor"
                            app:boxStrokeColor="@color/themeColor"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/layout_border"
                                android:singleLine="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/headerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <ImageButton
                        android:id="@+id/expanded_screen_backButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="18dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_arrow_back_24"
                        android:background="@drawable/btn_back"/>
                </RelativeLayout>

            </RelativeLayout>
        </FrameLayout>
    </com.amar.library.ui.StickyScrollView>

</RelativeLayout>